# Eigen-FBPlugins

./: ArrayBaseNC.h  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  EigenArrayPlugin.h  EigenArraybasePlugin.h  EigenDensebasePlugin.h  EigenFunctorsPlugin.h  EigenMapbasePlugin.h  EigenMatrixPlugin.h  EigenMatrixbasePlugin.h  EigenPlainobjectbasePlugin.h  EigenSparsematrixPlugin.h  EigenSparsematrixbasePlugin.h  EigenSparsevectorPlugin.h  EigenVectorwiseopPlugin.h  ForwardDeclarations.h  LICENSE  MathFunctions.h  README.md  perf-tests.yml
.github/: ISSUE_TEMPLATE.md  def-leaks.sh  perf-compare.sh
.github/ISSUE_TEMPLATE/: bug-report.md  documentation.md  feature-request.md  questions-help-support.md
.github/workflows/: lint-on-pull-request.yml  lint.yml  perf-tests-on-pull-request.yml  unit-tests-on-pull-request.yml  unit-tests.yml
array/: Arithmetic.h  Assign.h
arraybase/: BinaryOps.h  BitwiseOps.h  CellwiseOps.h  ChannelwiseOps.h  Indexing.h  LinAlg.h  OpenCV.h  Reductions.h  Reshaped.h  ScalarOps.h  UnaryOps.h  VectorwiseOpExt.h
arraybasenc/: Approx.h  Assign.h  BinaryOps.h  BooleanOps.h  CastExpr.h  Coeffs.h  NullaryOps.h  Reductions.h  Reshaped.h  ScalarOps.h  Select-helper.h  Select.h  UnaryOps.h
arraybasenc/2d/: Assign.h  Reductions.h
densebase/: Arithmetic.h  IO.h  Indexing.h  MissingOps-helper.h  MissingOps.h  Stats.h  TemplateOps-helper.h  TemplateOps.h
functors/: BinaryOps.h  CellwiseOps.h  ChannelwiseOps.h  Expr2d.h  ExtraSafety.h  GlobalFunctions.h  IO.h  Indexing.h  NaryOps.h  OpenCV.h  Reductions.h  Replicate.h  ScalarOps.h  Select.h  StlExtensions.h  Torch.h  TypeDefs.h  UnaryOps.h  VectorwiseOpExt.h  VectorwiseOpNC.h
matrix/: Arithmetic.h
perf-tests/: BaseOpsAndReductionsFloat1.cpp  BaseOpsAndReductionsInt1.cpp
plainobjectbase/: IDeep.h  OpenCV-helper.h  OpenCV.h  Stats.h  Torch.h
test/: Argmax.cpp  ArraybaseLinAlg.cpp  BaseScalarOps.cpp  BaseScalarOps.h  BitwiseOps.cpp  BooleanOps.cpp  BooleanOps.h  Casting.cpp  CellwiseRedux.cpp  ChannelwiseOps.cpp  ChannelwiseRedux2D.cpp  ChannelwiseRedux3D.cpp  Clamp.cpp  CommonHeader.h  CompScalarOps.cpp  CompScalarOps.h  CropPads.cpp  FullRedux.cpp  Indexing.cpp  NaryOps.cpp  OpenCV.cpp  PartialRedux.cpp  Replicate.cpp  ScalarConversion.cpp  SelectOps.cpp  Sorting.cpp  Statistics.cpp  Subsample.cpp  TemplatedOps.cpp  Torch.cpp
util/: Concepts.h  Helpers.h  Macros.h  MetaFunctors.h  TypeTraits.h  WrapScalar.h
vectorwiseop/: Block-helper.h  Block.h  Stats.h
